<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <!-- Header -->

    <include layout="@layout/fragment_header" />

    <!-- Main Page Content -->

    <RelativeLayout
        android:id="@+id/MainPageContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:layout_above="@id/footer"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#999999"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/homepage_new_play"
                    android:text="@string/home_newplay"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/homepage_load_play"
                    android:text="@string/home_loadplay"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/homepage_load_playbooks"
                    android:text="@string/home_playbooks"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#593"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_recentplay"
                    android:id="@+id/homepage_load_recent_play"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_recentplaybook"
                    android:id="@+id/homepage_load_recent_playbook"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


    <!-- Footer -->

    <include layout="@layout/fragment_footer" />

</RelativeLayout>